# AI-News-Digest

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  app.py  azure-pipelines.yml  docker-compose.yml  launch_embed_api.sh  launch_gen_api.sh  launch_tts.sh  launch_vllm_mistral.sh  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
.streamlit/: config.toml
conf/base/: cluster_bench_models.yml  qdrant_config.yaml
conf/base/tts_fastapi/: Dockerfile  README.md
notebooks/: 00_test_docker_compose_setup.ipynb  01_load_data_corpus.ipynb  02_clustering.ipynb  03_cluster_summarization.ipynb  API_trials.ipynb  cTransformers_trials.ipynb  clustering_trials.ipynb  langchain_qa_over_docs.ipynb  langchain_rag.ipynb  langchain_summarization.ipynb  summarization_trials.ipynb
notebooks/scripts/: API_trials.py  cTransformers_trials.py  langchain_summarization.py
requirements/: dev-requirements.in  environment.yml  requirements.in  requirements.txt  tests-requirements.in
src/: environment.yml  requirements.txt
src/ai_news_digest/: utils.py
src/ai_news_digest/code/: utils.py
src/ai_news_digest/models/: core.py
src/ai_news_digest/pipelines/: arxiv_pipeline.py  rest_api_pipeline.py
src/ai_news_digest/pipelines/.dlt/: .sources
src/ai_news_digest/pipelines/rest_api/: README.md  typing.py  utils.py
src/ai_news_digest/steps/: __init__.py  benchmark.py  clustering_utils.py  create_qdrant_collection.py  create_qdrant_sem_search_101.py  create_vector_db.py  embed.py  embed_utils.py  llm.py  llm_utils.py  load_arxiv_corpus.py  load_news_corpus.py  tts.py  tts_utils.py
src/code/: benchmark.py  load_arxiv_corpus.py
tests/: test_models.py  test_smoke.py
